--- a/kitty.conf
+++ b/kitty.conf
@@ -2,9 +2,14 @@
 
 # https://sw.kovidgoyal.net/kitty/conf/
 
+# window settings
+remember_window_size no
+initial_window_width 85c
+initial_window_height 25c
+
 # To get a full list of supported fonts use the `kitty +list-fonts` command.
-font_family     IosevkaTerm Nerd Font
-#font_family      JetBrainsMono Nerd Font
+#font_family     IosevkaTerm Nerd Font
+# font_family      JetBrainsMono Nerd Font
 font_size 11.0
 
 scrollback_lines 8000
@@ -31,10 +36,6 @@ mouse_map ctrl+left click ungrabbed mouse_handle_click selection link prompt
 mouse_map ctrl+left press ungrabbed mouse_selection normal
 
 mouse_map right press ungrabbed copy_to_clipboard
-
-remember_window_size  yes
-initial_window_width  640
-initial_window_height 400
 
 #: If enabled, the window size will be remembered so that new
 #: instances of kitty will have the same size as the previous
@@ -273,7 +274,7 @@ map ctrl+a>shift+d     debug_config
 
 
 # BEGIN_KITTY_THEME
-# Dark One Nuanced
+# Catppuccin-Macchiato
 include current-theme.conf
 # END_KITTY_THEME
 
@@ -288,3 +289,11 @@ map f3 kitten hints --program '*'
 # map double ctrl+a to ctrl+a (home)
 map ctrl+a>ctrl+a send_text all \x01
 
+
+
+# BEGIN_KITTY_FONTS
+font_family      family="CaskaydiaMono Nerd Font"
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
+# END_KITTY_FONTS
